build: configure desktop distribution