@@ -4,7 +4,9 @@ import com.android.build.api.withAndroid
 import com.github.benmanes.gradle.versions.updates.DependencyUpdatesTask
 import com.github.benmanes.gradle.versions.updates.resolutionstrategy.ComponentFilter
 import com.github.benmanes.gradle.versions.updates.resolutionstrategy.ComponentSelectionWithCurrent
+import de.undercouch.gradle.tasks.download.Download
 import org.jetbrains.compose.desktop.application.dsl.TargetFormat
+import org.jetbrains.compose.desktop.application.tasks.AbstractJPackageTask
 import org.jetbrains.kotlin.gradle.ExperimentalKotlinGradlePluginApi
 import org.jetbrains.kotlin.gradle.ExperimentalWasmDsl
 import org.jetbrains.kotlin.gradle.InternalKotlinGradlePluginApi
@@ -21,6 +23,8 @@ plugins {
     alias(libs.plugins.ksp)
     alias(libs.plugins.androidx.room)
     alias(libs.plugins.gradleVersions)
+//    alias(libs.plugins.kotest) // temporarily disabled: breaks kotlin
+    alias(libs.plugins.download)
 }
 
 val computedVersionName: String by rootProject.extra
@@ -196,11 +200,84 @@ compose.desktop {
         mainClass = "dev.jfronny.zerointerest.MainKt"
 
         nativeDistributions {
-            targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
+            targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.AppImage)
             packageName = "dev.jfronny.zerointerest"
             packageVersion = computedVersionName.substringBefore('+')
+            modules("java.net.http", "jdk.unsupported")
+            jvmArgs("--enable-native-access=ALL-UNNAMED")
+
+            windows {
+                iconFile = rootProject.file("icon.ico")
+            }
+            linux {
+                packageVersion = computedVersionName
+                iconFile = rootProject.file("icon.png")
+            }
+        }
+
+        buildTypes.release.proguard {
+            version = libs.versions.proguard
+            configurationFiles.from("proguard-rules.pro", "proguard-desktop-rules.pro")
+            optimize = false
         }
     }
+}
+
+val appImageTool = layout.buildDirectory.file("tmp/appimagetool-x86_64.AppImage")
+val downloadAppImageTool by tasks.registering(Download::class) {
+    notCompatibleWithConfigurationCache("Uses build script variable as target for simplicity")
+    src("https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage")
+    dest(appImageTool)
+    overwrite(true)
+    onlyIfModified(false)
+    doLast {
+        appImageTool.get().asFile.setExecutable(true)
+    }
+}
+
+afterEvaluate {
+    val packageTasks = tasks.withType(AbstractJPackageTask::class)
+    val appDirSrc = project.file("appimage")
+
+    fun configureAppImage(type: String) {
+        packageTasks.findByName("package${type}AppImage")?.let {
+            val files = it.outputs.files.files
+            require(files.size == 1) { "Expected exactly one file, got ${files.size}" }
+            val appName = it.packageName.get()
+            val packageOutput = files.first().resolve(appName)
+            val kind = files.first().parentFile.name
+            val appDir = layout.buildDirectory.dir("appimage/$kind/$appName.AppDir")
+            val finalOutput = layout.buildDirectory.file("appimage/$kind/$appName-x86_64.AppImage")
+
+            val prepareAppImage = tasks.register("prepare${type}AppImage", Copy::class) {
+                dependsOn(it)
+                from(appDirSrc)
+                from(packageOutput)
+                into(appDir)
+                exclude { it.path.contains("/legal/") }
+                doLast {
+                    appDir.get().asFile.let {
+                        it.resolve("lib/dev.jfronny.zerointerest.png").copyTo(it.resolve("zerointerest.png"), overwrite = true)
+                    }
+                }
+            }
+
+            val buildAppImage = tasks.register("build${type}AppImage", Exec::class) {
+                dependsOn(downloadAppImageTool, prepareAppImage)
+                workingDir = layout.buildDirectory.dir("appimage").get().asFile
+                commandLine(
+                    appImageTool.get().asFile.absolutePath,
+                    appDir.get().asFile.absolutePath,
+                    finalOutput.get().asFile.absolutePath,
+                )
+                environment("ARCH", "x86_64")
+                outputs.file(finalOutput)
+            }
+        }
+    }
+
+    configureAppImage("")
+    configureAppImage("Release")
 }
 
 open class UpgradeToUnstableFilter : ComponentFilter {
